--- a/style.css
+++ b/style.css
@@ -1609,9 +1609,15 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	border-bottom: 1px solid #eee;
 	overflow: hidden;
 	background: #fff;
-	padding: 0 30px;
+	padding-bottom: 20px;
+	margin-top: 70px;
 }
-
+.page-header .page-title{
+	font-size: 0;
+}
+.page-header .page-title span{
+	font-size: 36px;
+}
 /*--------------------------------------------------------------
 # Comments
 --------------------------------------------------------------*/
@@ -1669,6 +1675,7 @@ p.comment-form-cookies-consent {
 
 .comment-form .submit {
 	padding: 20px;
+	color: #fff;
 }
 
 .comments-wrapper .comment-body {
@@ -1832,7 +1839,6 @@ object {
 .post-wrapper {
 	padding: 1.5em;
 	background-color: #fff;
-	overflow: hidden;
 }
 
 .blog .featured-wrapper,
@@ -2014,13 +2020,12 @@ object {
 ===============================*/
 
 .breadcrumb {
-	text-align: left;
+	text-align: center;
 	margin: 0 auto;
 	padding: 0;
 	font-size: 0.778em;
 	text-transform: uppercase;
-	background: #e5f2ee;
-	border-bottom: 1px solid #e7e7e7;
+	background: #f1f9ff;
 }
 
 .breadcrumb-trail {
@@ -2520,7 +2525,7 @@ object {
 
 
 .single-blog .blog-content .blog-meta .posted-in a {
-  background-image: linear-gradient(120deg, #54d6eb 0%, #035cdd 100%);
+  background-color: #005de0;
   color: #fff;
   font-size: 12px;
   border-radius: 3px;
@@ -2731,14 +2736,14 @@ object {
 }
 
 .blog-sidebar {
-  border: 1px solid #ebebeb;
+  background: #ffffff;
+  box-shadow: 0px 0px 98px 0px rgb(0 0 0 / 7%);
   border-radius: 5px;
   padding: 30px;
   margin-top: 70px;
   margin-left: 65px;
   position: sticky;
   top: 0;
-  background: #ffffff;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -2977,13 +2982,9 @@ object {
 
 .blog-details-post .single-blog {
   margin-top: 70px;
-  background: none;
-  box-shadow: none;
 }
 
-.blog-details-post .single-blog .blog-content {
-  padding-left: 0;
-}
+
 
 .blog-details-post .single-blog .blog-content .title {
   font-size: 24px;
@@ -3177,6 +3178,7 @@ object {
   transform: translateX(-50%);
   top: 30px;
   bottom: 30px;
+  margin: 0 10px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -3456,255 +3458,7 @@ object {
   font-size: 16px;
   padding: 0 40px;
 }
-/*--
-/*  17 - Blog Standard CSS
-/*----------------------------------------*/
-.blog-standard-wrap {
-  margin-top: -70px;
-}
 
-.blog-standard-wrap .blog-post-wrap .pagination {
-  margin-top: 55px;
-}
-
-.single-blog-post {
-  margin-top: 70px;
-}
-
-.blog-sidebar {
-  border: 1px solid #ebebeb;
-  border-radius: 5px;
-  padding: 30px;
-  margin-top: 70px;
-  margin-left: 65px;
-  position: sticky;
-  top: 0;
-}
-
-@media only screen and (max-width: 1199px) {
-  .blog-sidebar {
-    margin-left: 15px;
-  }
-}
-
-@media only screen and (max-width: 991px) {
-  .blog-sidebar {
-    margin-left: 0px;
-  }
-}
-
-.blog-sidebar .sidebar-widget-1 {
-  margin-top: 0;
-}
-
-.sidebar-widget {
-  margin-top: 45px;
-}
-
-.sidebar-widget .search-form {
-  position: relative;
-}
-
-.sidebar-widget .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"]) {
-  width: 100%;
-  height: 50px;
-  margin-bottom: 0;
-  border: 0;
-  padding-right: 35px;
-  background: #f8fafb;
-  color: #415674;
-  font-weight: 700;
-  outline: none;
-  overflow: hidden;
-}
-
-.sidebar-widget .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"])::-webkit-input-placeholder {
-  opacity: 0.95;
-  font-size: 14px;
-  font-family: "Manrope", sans-serif;
-  color: #898c94;
-  font-weight: 400;
-}
-
-.sidebar-widget .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"]):-moz-placeholder {
-  opacity: 0.95;
-  font-size: 14px;
-  font-family: "Manrope", sans-serif;
-  color: #898c94;
-  font-weight: 400;
-}
-
-.sidebar-widget .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"])::-moz-placeholder {
-  opacity: 0.95;
-  font-size: 14px;
-  font-family: "Manrope", sans-serif;
-  color: #898c94;
-  font-weight: 400;
-}
-
-.sidebar-widget .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"]):-ms-input-placeholder {
-  opacity: 0.95;
-  font-size: 14px;
-  font-family: "Manrope", sans-serif;
-  color: #898c94;
-  font-weight: 400;
-}
-
-.sidebar-widget .search-form button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 0;
-  width: 50px;
-  height: 50px;
-  background: transparent;
-  border: 0;
-  border-radius: 5px;
-  font-size: 14px;
-  color: #111111;
-  transition: all 0.3s linear;
-}
-
-.sidebar-widget .search-form button:hover {
-  background: #005de0;
-  color: #ffffff;
-}
-
-.blog-sidebar .widget-title {
-  margin-bottom: 25px;
-}
-
-.sidebar-widget .widget-title .title {
-  font-size: 18px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 700;
-  color: #333333;
-  display: inline-block;
-}
-
-.sidebar-widget .recent-posts ul li {
-  margin-top: 30px;
-}
-
-.sidebar-widget .recent-posts ul li:first-child {
-  margin-top: 0;
-}
-
-.sidebar-widget .recent-posts ul li .post-link {
-  display: flex;
-  align-items: center;
-}
-
-.sidebar-widget .recent-posts ul li .post-link .post-thumb {
-  margin-right: 20px;
-}
-
-.sidebar-widget .recent-posts ul li .post-link .post-thumb img {
-  min-width: 70px;
-  height: 70px;
-  border-radius: 10px;
-  image-rendering: crisp-edges;
-}
-
-.sidebar-widget .recent-posts ul li .post-link .post-text .title {
-  font-size: 14px;
-  line-height: 16px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 600;
-  transition: all 0.3s linear;
-}
-
-.sidebar-widget .recent-posts ul li .post-link .post-text .post-meta {
-  font-size: 12px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 400;
-  line-height: 24px;
-  color: #838383;
-  display: inline-block;
-  margin-top: 5px;
-}
-
-.sidebar-widget .recent-posts ul li .post-link .post-text .post-meta i {
-  color: #005de0;
-  margin-right: 5px;
-}
-
-.sidebar-widget .recent-posts ul li .post-link:hover .post-text .title {
-  color: #005de0;
-}
-
-.sidebar-widget .category .cate-item {
-  margin-top: 15px;
-}
-
-.sidebar-widget .category .cate-item:first-child {
-  margin-top: 0;
-}
-
-.sidebar-widget .category .cate-item a {
-  display: flex;
-  font-size: 14px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 400;
-  color: #29303c;
-  transition: all 0.3s linear;
-}
-
-.sidebar-widget .category .cate-item a i {
-  font-size: 10px;
-  line-height: 24px;
-  color: #005de0;
-  margin-right: 5px;
-}
-
-.sidebar-widget .category .cate-item a .post-count {
-  margin-left: auto;
-  align-items: flex-start;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 50%;
-  background: #e4f2f8;
-  font-size: 14px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 400;
-  color: #005de0;
-  transition: all 0.3s linear;
-}
-
-.sidebar-widget .category .cate-item a:hover {
-  color: #005de0;
-}
-
-.sidebar-widget .category .cate-item a:hover .post-count {
-  background: #005de0;
-  color: #ffffff;
-}
-
-.sidebar-widget .sidebar-tag li {
-  display: inline-block;
-  margin-bottom: 10px;
-  margin-right: 4px;
-}
-
-.sidebar-widget .sidebar-tag li a {
-  display: inline-block;
-  border-radius: 5px;
-  padding: 8px 15px;
-  font-size: 14px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 400;
-  color: #666666;
-  line-height: 18px;
-  background: #f9f9f9;
-  transition: all 0.3s linear;
-}
-
-.sidebar-widget .sidebar-tag li a:hover {
-  background-color: #005de0;
-  color: #ffffff;
-}
 
 
 
