--- a/style.css
+++ b/style.css
@@ -951,9 +951,6 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	text-decoration: underline;
 }
 
-.main-navigation .current_page_item > a {
-	border-bottom: 2px solid #000;
-}
 
 /*first sub-menu*/
 .main-navigation ul ul {
@@ -1022,7 +1019,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .main-navigation li.menu-item-has-children>a:before {
 	position: absolute;
 	content: '\203A';
-	top: 1.5rem;
+	top: 50%;
 	right: 20px;
 	line-height: 0;
 	font-size: 1.5em;
@@ -1463,7 +1460,6 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 }
 
 .widget a {
-	color: #6f6f6f;
 	font-size: 16px;
 	font-weight: 400;
 	color: #29303c;
@@ -1612,10 +1608,10 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	padding-bottom: 20px;
 	margin-top: 70px;
 }
-.page-header .page-title{
+.archive .page-header .page-title{
 	font-size: 0;
 }
-.page-header .page-title span{
+.archive .page-header .page-title span{
 	font-size: 36px;
 }
 /*--------------------------------------------------------------
@@ -1838,7 +1834,10 @@ object {
 
 .post-wrapper {
 	padding: 1.5em;
-	background-color: #fff;
+	background: #ffffff;
+	box-shadow: 0px 0px 98px 0px rgb(0 0 0 / 7%);
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
 .blog .featured-wrapper,
@@ -2317,7 +2316,6 @@ object {
 	display: block;
 	margin-top: 2.5em;
 	background: #fff;
-	padding: 0 15px;
 }
 
 .related-pots-block a:focus {
@@ -2335,15 +2333,20 @@ object {
 	list-style-type: none;
 }
 
-.related-post-entries .entry-title {
+.related-post-entries .entry-title a{
 	font-size: 1.2em;
+	color: #090d2f;
 }
 
 .related-post-entries li {
-	padding: 10px;
 	margin-bottom: 15px;
 }
-
+.related-pots-block  li figure{
+	margin-bottom: 0;
+}
+.related-pots-block img{
+	border-radius: 5px;
+}
 @media screen and (min-width: 768px) {
 	.related-post-entries li {
 		float: left;
@@ -2747,6 +2750,9 @@ object {
   top: 0;
 }
 
+.right-sidebar .blog-sidebar{
+	margin-left: 0;
+}
 @media only screen and (max-width: 1199px) {
   .blog-sidebar {
     margin-left: 15px;
