--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://aeonwp.com/aeonblock/
 Author: aeontheme
 Author URI: https://aeonwp.com/
 Description: Simple and clean accessibility ready blog theme. It comes with easy to use customizer based theme options, copyright text, post templates, sidebar options, meta options, featured image option, excerpt length option, read more text, sticky sidebar, font preview and many more. AeonBlock has soft green and blue colors, and many color options. This is a complete WordPress theme for bloggers. It is Schema ready theme. 
-Version: 1.0.2
+Version: 1.0.1
 Tested up to: 5.9
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -755,11 +755,7 @@ a:visited {
 	color: blue;
 }
 
-.widget a:visited,
-ol a:visited,
-ul a:visited {
-	color: #516185;
-}
+
 
 a:focus {
 	outline: thin dotted;
@@ -772,7 +768,7 @@ a:active {
 }
 
 body {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.75;
   font-weight: 400;
   font-family: "Roboto", sans-serif;
@@ -940,7 +936,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	font-family: Manrope, sans-serif;
 	font-weight: 700;
 	font-size: 15px;
-	color: #4c4d56;
+	color: #212121;
 }
 
 .main-navigation a:focus,
@@ -1230,7 +1226,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	height: 35px;
 	padding: 0;
 	line-height: 33px;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: 400;
 	text-align: center;
 	color: #6c7381;
@@ -1405,7 +1401,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .widget {
 	background-color: #fff;
 	margin: 0 0 1.5em;
-	color: #6f6f6f;
+	color: #212121;
 	word-break: break-word;
 }
 
@@ -1464,7 +1460,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 .widget a {
 	font-size: 16px;
 	font-weight: 400;
-	color: #29303c;
+	color: #212121;
 	transition: all 0.3s linear;
 }
 
@@ -1477,7 +1473,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 	display: initial;
     font-size: 16px;
     font-weight: 400;
-    color: #29303c;
+    color: #212121;
     transition: all 0.3s linear;
 }
 
@@ -1724,6 +1720,7 @@ p.comment-form-cookies-consent {
 .comments-wrapper .comment-author a,
 .comments-wrapper .comment-author .fn {
 	text-decoration: none; 
+	color: #212121;
 }
 
 .comments-wrapper .comment-author a:focus,
@@ -1743,8 +1740,8 @@ p.comment-form-cookies-consent {
 }
 
 .comments-wrapper .comment-metadata a {
-	color: #6f6f6f;
-}
+	color: #212121;
+}  
 
 .comment-metadata .edit-link {
 	margin-left: 2em;
@@ -1753,6 +1750,7 @@ p.comment-form-cookies-consent {
 .comments-wrapper .reply a {
 	float: right;
 	padding: 0.5em;
+	color: #212121;
 }
 
 @media (max-width: 600px) {
@@ -1882,7 +1880,7 @@ object {
 	font-size: 14px;
     line-height: 24px;
     font-weight: 600;
-    color: #999999;
+    color: #212121;
 }
 
 .entry-header .entry-meta li {
@@ -1902,7 +1900,7 @@ object {
 	background-color: #f1f5f5;
 	display: inline-block;
 	padding: 4px 13px;
-	font-size: 14px;
+	font-size: 16px;
 	text-transform: uppercase;
 	margin-bottom: 2px;
 	border-radius: 3px;
@@ -1998,7 +1996,7 @@ object {
 	text-align: center;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
-  color: #c4c5c7;
+  color: #ffffff;
 }
 
 .site-footer .site-info a {
@@ -2040,7 +2038,7 @@ object {
 	text-align: center;
 	margin: 0 auto;
 	padding: 0;
-	font-size: 0.778em;
+	font-size: 0.875em;
 	text-transform: uppercase;
 	background: #f1f9ff;
 }
@@ -2595,7 +2593,7 @@ object {
   line-height: 24px;
   font-family: "Manrope", sans-serif;
   font-weight: 600;
-  color: #999999;
+  color: #212121;
 }
 
 @media only screen and (max-width: 575px) {
@@ -2611,17 +2609,19 @@ object {
 .single-blog .blog-content .title {
   font-size: 22px;
   line-height: 30px;
-  color: #333333;
+  color: #212121;
   padding-right: 15px;
   margin: 15px 0;
 }
-
+.single-blog .blog-content .title a{
+	color: #212121;
+}
 .single-blog .blog-content p {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 26px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
-  color: #4c4d56;
+  color: #212121;
   margin-top: 10px;
 }
 
@@ -2634,7 +2634,7 @@ object {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   font-weight: 600;
   color: #005de0;
@@ -2817,7 +2817,7 @@ object {
 
 .blog-sidebar .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"])::-webkit-input-placeholder {
   opacity: 0.95;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   color: #898c94;
   font-weight: 400;
@@ -2825,7 +2825,7 @@ object {
 
 .blog-sidebar .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"]):-moz-placeholder {
   opacity: 0.95;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   color: #898c94;
   font-weight: 400;
@@ -2833,7 +2833,7 @@ object {
 
 .blog-sidebar .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"])::-moz-placeholder {
   opacity: 0.95;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   color: #898c94;
   font-weight: 400;
@@ -2841,7 +2841,7 @@ object {
 
 .blog-sidebar .search-form input:not([type="submit"]):not([type="checkbox"]):not([type="radio"]):not([type="file"]):-ms-input-placeholder {
   opacity: 0.95;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   color: #898c94;
   font-weight: 400;
@@ -2909,7 +2909,7 @@ object {
 }
 
 .sidebar-widget .recent-posts ul li .post-link .post-text .title {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 16px;
   font-family: "Manrope", sans-serif;
   font-weight: 600;
@@ -2945,7 +2945,7 @@ object {
 
 .sidebar-widget .category .cate-item a {
   display: flex;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
   color: #29303c;
@@ -2968,7 +2968,7 @@ object {
   text-align: center;
   border-radius: 50%;
   background: #e4f2f8;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
   color: #005de0;
@@ -2994,7 +2994,7 @@ object {
   display: inline-block;
   border-radius: 5px;
   padding: 8px 15px;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
   color: #666666;
@@ -3094,7 +3094,7 @@ object {
 }
 
 .blog-details-post .blog-details-content .blog-details-text p {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 30px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
@@ -3123,7 +3123,7 @@ object {
 }
 
 .blog-details-post .blog-details-content .blog-details-tag-share .blog-details-tag .sidebar-widget .label {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 30px;
   font-family: "Manrope", sans-serif;
   font-weight: 700;
@@ -3232,7 +3232,9 @@ object {
 .custom-post-pagination .next-post {
   width: 50%;
 }
-
+.custom-post-pagination .next-post{
+	text-align: right;
+}
 @media only screen and (max-width: 767px) {
   .custom-post-pagination .previous-post,
   .custom-post-pagination .next-post {
@@ -3298,11 +3300,11 @@ object {
   }
 }
 
-.custom-post-pagination .blog-pagination-post .post-content .title {
+.custom-post-pagination .blog-pagination-post .post-content .title a{
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
-  color: #333333;
+  color: #212121;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -3373,7 +3375,7 @@ object {
 }
 
 .blog-details-post .blog-details-content .comment-wrap .comment-box .comment-items li .single-comment .comment-content p {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 24px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
@@ -3382,7 +3384,7 @@ object {
 
 .blog-details-post .blog-details-content .comment-wrap .comment-box .comment-items li .single-comment .comment-content .meta {
   margin-top: 10px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
 }
 
@@ -3412,7 +3414,7 @@ object {
 }
 
 .blog-details-post .blog-details-content .comment-wrap .comment-form p {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 30px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
